syntax = "proto3";

package ru.miet.example.grpc.chat.service;

import "common.proto";

// TODO: implement logout and expire token
service AuthService {
  rpc login(LoginRequest) returns (LoginResponse) {}
  rpc refreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  StatusCode statusCode = 1;
  string statusDescription = 2;
  string token = 3;
  User user = 4;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  StatusCode statusCode = 1;
  string statusDescription = 2;
  string token = 3;
}
